--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
         <artifactId>maven-plugin-plugin</artifactId>
         <version>3.2</version>
         <configuration>
-          <goalPrefix>rascal-maven-plugin</goalPrefix>
+          <goalPrefix>rascal</goalPrefix>
           <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
         </configuration>
         <executions>
@@ -85,12 +85,6 @@
             <id>mojo-descriptor</id>
             <goals>
               <goal>descriptor</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>help-goal</id>
-            <goals>
-              <goal>helpmojo</goal>
             </goals>
           </execution>
         </executions>
@@ -101,7 +95,6 @@
     <profile>
       <id>run-its</id>
       <build>
-
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
