--- a/src/it/simple-it/pom.xml
+++ b/src/it/simple-it/pom.xml
@@ -3,7 +3,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.rascalmpl.it</groupId>
+  <groupId>org.rascalmpl</groupId>
   <artifactId>simple-it</artifactId>
   <version>1.0-SNAPSHOT</version>
 
@@ -28,10 +28,10 @@
         </configuration>
         <executions>
           <execution>
-            <id>compile-rascal</id>
+            <id>it-compile</id>
             <phase>build</phase>
             <goals>
-              <goal>compile</goal>
+              <goal>compile-rascal</goal>
             </goals>
           </execution>
         </executions>
