--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,19 @@
 			<groupId>org.rascalmpl</groupId>
 			<artifactId>rascal</artifactId>
 			<version>0.12.0-SNAPSHOT</version>
+                        <scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.rascalmpl</groupId>
 			<artifactId>typepal</artifactId>
 			<version>0.2.0-SNAPSHOT</version>
+                        <scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.rascalmpl</groupId>
+			<artifactId>rascal-core</artifactId>
+			<version>0.2.0-SNAPSHOT</version>
+                        <scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
