--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.target>1.8</maven.compiler.target>
+                <maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 
 	<dependencies>
@@ -118,11 +120,11 @@
 						<configuration>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<manifestEntries>
-                                                                                <Name>rascal</Name>
-                                                                                <Specification-Version>${project.version}</Specification-Version>
-                                                                                <Specification-Vendor>http://www.usethesource.io</Specification-Vendor>
-									</manifestEntries>
+								<manifestEntries>
+									<Name>Rascal Maven Plugin</Name>
+									<Specification-Version>${project.version}</Specification-Version>
+									<Specification-Vendor>http://www.usethesource.io</Specification-Vendor>
+								</manifestEntries>
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
