added errorsAsWarnings flag and warningsAsErrors flag

--- a/src/it/simple-it/pom.xml
+++ b/src/it/simple-it/pom.xml
@@ -24,6 +24,7 @@
               <srcs>
                  <src>${project.basedir}</src>
               </srcs>
+              <errorsAsWarnings>true</errorsAsWarnings>
         </configuration>
         <executions>
           <execution>
