--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,7 @@
 							<postBuildHookScript>verify</postBuildHookScript>
 							<localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
 							<settingsFile>src/it/settings.xml</settingsFile>
+							<streamLogs>true</streamLogs>
 							<goals>
 								<goal>clean</goal>
 								<goal>test-compile</goal>
