--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.rascalmpl</groupId>
 	<artifactId>rascal-maven-plugin</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1-simulated-annotations-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>Rascal Maven Plugin</name>
