--- a/src/it/simple-it/pom.xml
+++ b/src/it/simple-it/pom.xml
@@ -18,7 +18,7 @@
       <plugin>
         <groupId>org.rascalmpl</groupId>
         <artifactId>rascal-maven-plugin</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.2.17-SNAPSHOT</version>
         <configuration>
               <bin>${project.build.outputDirectory}</bin>
               <srcs>
@@ -31,7 +31,7 @@
             <id>it-compile</id>
             <phase>compile</phase>
             <goals>
-              <goal>compile-rascal</goal>
+              <goal>compile</goal>
             </goals>
           </execution>
         </executions>
