--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 			<groupId>org.rascalmpl</groupId>
 			<artifactId>rascal</artifactId>
                         <!-- WARNING: do not use a SNAPSHOT dependency here, because that breaks the bootstrap chain -->
-			<version>0.18.1</version>
+			<version>0.19.0-SNAPSHOT</version>
                         <scope>compile</scope>
 		</dependency>
 		<dependency>
