--- a/pom.xml
+++ b/pom.xml
@@ -50,22 +50,19 @@
 		<dependency>
 			<groupId>org.rascalmpl</groupId>
 			<artifactId>rascal</artifactId>
-                        <!-- WARNING: do not use a SNAPSHOT dependency here, because that breaks the bootstrap chain -->
 			<version>0.19.3-SNAPSHOT</version>
                         <scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.rascalmpl</groupId>
 			<artifactId>typepal</artifactId>
-                        <!-- WARNING: do not use a SNAPSHOT dependency here, because that breaks the bootstrap chain -->
-			<version>0.4.9</version>
+			<version>0.4.10-SNAPSHOT</version>
                         <scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.rascalmpl</groupId>
 			<artifactId>rascal-core</artifactId>
-                        <!-- WARNING: do not use a SNAPSHOT dependency here, because that breaks the bootstrap chain -->
-			<version>0.4.16</version>
+			<version>0.4.17-SNAPSHOT</version>
                         <scope>compile</scope>
 		</dependency>
 		<dependency>
