--- a/src/it/simple-it/pom.xml
+++ b/src/it/simple-it/pom.xml
@@ -18,13 +18,17 @@
       <plugin>
         <groupId>org.rascalmpl</groupId>
         <artifactId>rascal-maven-plugin</artifactId>
-        <version>0.2.17-SNAPSHOT</version>
+        <version>0.3.5-SNAPSHOT</version>
         <configuration>
               <bin>${project.build.outputDirectory}</bin>
               <srcs>
                  <src>${project.basedir}</src>
               </srcs>
               <errorsAsWarnings>true</errorsAsWarnings>
+              <parallel>true</parallel>
+              <parallelPreChecks>
+                  <parallelPreCheck>${project.basedir}/Example.rsc</parallelPreCheck>
+              </parallelPreChecks>
         </configuration>
         <executions>
           <execution>
