--- a/pom.xml
+++ b/pom.xml
@@ -37,19 +37,19 @@
         <dependency>
             <groupId>org.rascalmpl</groupId>
             <artifactId>rascal</artifactId>
-            <version>0.19.4-SNAPSHOT</version>
+            <version>0.19.3</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.rascalmpl</groupId>
             <artifactId>typepal</artifactId>
-            <version>0.4.11-SNAPSHOT</version>
+            <version>0.4.10</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.rascalmpl</groupId>
             <artifactId>rascal-core</artifactId>
-            <version>0.4.17-SNAPSHOT</version>
+            <version>0.4.16</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
