--- a/src/it/simple-it/pom.xml
+++ b/src/it/simple-it/pom.xml
@@ -18,7 +18,7 @@
       <plugin>
         <groupId>org.rascalmpl</groupId>
         <artifactId>rascal-maven-plugin</artifactId>
-        <version>0.4.5-SNAPSHOT</version>
+        <version>[0.1,)</version>
         <configuration>
               <bin>${project.build.outputDirectory}</bin>
               <srcs>
