--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>org.rascalmpl</groupId>
             <artifactId>rascal-core</artifactId>
-            <version>0.4.16</version>
+            <version>0.4.18-RC1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
