--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.rascalmpl</groupId>
             <artifactId>rascal</artifactId>
-            <version>0.20.0-RC1</version>
+            <version>0.22.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
