--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <scm>
         <developerConnection>scm:git:ssh://git@github.com/usethesource/rascal-maven-plugin.git</developerConnection>
-        <tag>v0.8.3</tag>
+        <tag>HEAD</tag>
       </scm>
 
     <name>Rascal Maven Plugin</name>
