--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,13 @@
         <dependency>
             <groupId>org.rascalmpl</groupId>
             <artifactId>rascal</artifactId>
-            <version>0.25.4</version>
+            <version>0.26.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.rascalmpl</groupId>
+            <artifactId>rascal-tutor</artifactId>
+            <version>0.2.1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
