--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.rascalmpl</groupId>
             <artifactId>rascal</artifactId>
-            <version>0.27.2-SNAPSHOT</version>
+            <version>0.27.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
